force-app/main/default/objects/C360_FinancialInfo__c.object
<CustomObject>
    <fields>
        <fullName>AccigClerk__c</fullName>
        <label>Accig Clerk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AccigClerk</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>CompanyName__r.AccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>As_of__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As of</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CashManagementGroup__c</fullName>
        <label>Cash Management Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CashManagementGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cashmgmtgroup__c</fullName>
        <label>Cash mgmt group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BC   BORROW/CRUDE</fullName>
                </value>
                <value>
                    <fullName>BP   BORROW/PRODUCT</fullName>
                </value>
                <value>
                    <fullName>P0   Lr-Feedstock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chkdoubleinv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chk double inv.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompanyCodeTOP__c</fullName>
        <label>Company Code (TOP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CompanyCodeTOP</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyCodeTX__c</fullName>
        <label>Company Code (TX)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CompanyCodeTX</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CompanyCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Info</relationshipLabel>
        <relationshipName>Financial_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditBalanceFormula__c</fullName>
        <formula>IF( ISPICKVAL( CreditControlArea__c , &apos;1100&apos;) , &apos;-&apos; , TEXT(Credit_Balance_Calculation__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Balance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditBalance__c</fullName>
        <label>Credit Balance (Not Use)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditControlArea__c</fullName>
        <label>Credit Control Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CreditControlArea</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditLimit__c</fullName>
        <label>Credit Limit</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Balance_Calculation__c</fullName>
        <formula>CreditLimit__c - Outstanding__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Balance (Calculation)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Condition__c</fullName>
        <label>Credit Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CreditCondition</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrencyLocal__c</fullName>
        <label>Currency (Local)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalCreditRating__c</fullName>
        <label>Internal Credit Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Internal_Credit_Rating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Liable1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Liable 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liable2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Liable 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutstandingAlert__c</fullName>
        <formula>(notified__c == FALSE) &amp;&amp; (Outstanding__c / CreditLimit__c *100 &gt;= 80) &amp;&amp; (  Credit_Balance_Calculation__c != 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outstanding__c</fullName>
        <label>Outstanding (credit exposure)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentCondition__c</fullName>
        <label>Payment Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PaymentHistoryRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment History Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PaymentMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PocketMarginCurrency__c</fullName>
        <label>Pocket Margin Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PocketMarginUSD__c</fullName>
        <label>Pocket Margin (USD)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PocketMargin__c</fullName>
        <label>Pocket Margin (Year to date)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReconAccount__c</fullName>
        <label>Recon Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ReconcillationAccount</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recty1__c</fullName>
        <label>Rec.ty 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Recty1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recty2__c</fullName>
        <label>Rec.ty 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Recty2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RevenueUSD__c</fullName>
        <label>Revenue (USD)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue (Year to date)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SortKey__c</fullName>
        <label>Sort Key</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>009</fullName>
                    <label>009 External Doc. Number</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WHTaxCountry__c</fullName>
        <label>WH Tax Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wthttype1__c</fullName>
        <description>With Holding Tax Type 1</description>
        <label>Wth.t.type 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Wthttype1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wthttype2__c</fullName>
        <label>Wth.t.type 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Wthttype2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>notified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>change value to true when email is sent.</description>
        <label>notified</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Info</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FI-{0000000}</displayFormat>
        <label>Financial Info Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>